# radium

./: README.md  gradle.properties  radium-agent-skills.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/radium/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/radium/: ChatActivity.kt  ConversationAdapter.kt  HardwareScanner.kt  HomeActivity.kt  LocalAiBridge.kt  MainActivity.kt  MessageAdapter.kt  ModelDownloader.kt  OnboardingActivity.kt  PermissionSlideFragment.kt  RadioEngine.kt  WelcomeActivity.kt
app/src/main/java/com/example/radium/data/: ConversationEntity.kt  MessageDao.kt  MessageEntity.kt  RadiumDatabase.kt
app/src/main/res/drawable/: bg_bubble_received.xml  bg_bubble_sent.xml  bg_button_primary.xml  bg_elysium_gradient.xml  bg_fab.xml  bg_frosted_button.xml  bg_glass_card.xml  bg_glass_input.xml  bg_welcome_gradient.xml  ic_send.xml  ic_tick_double.xml  ic_tick_failed.xml  ic_tick_single.xml  telemetry_border.xml
app/src/main/res/layout/: activity_chat.xml  activity_home.xml  activity_main.xml  activity_onboarding.xml  activity_welcome.xml  dialog_new_chat.xml  fragment_permission_slide.xml  item_bubble_received.xml  item_bubble_sent.xml  item_conversation.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/radium/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
